@@ -1,10 +1,0 @@
-# ChangeLog for media-sound/kenvy24
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
-
-*kenvy24-99999999 (21 Jan 2012)
-
-  21 Jan 2012; Frieder Buerzele <evermind@tuxfamily.org>
-  +kenvy24-99999999.ebuild:
-  added kenvy24 live ebuild (thx Andrew West)
-
